syntax = "proto3";

option go_package = "./;base";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/team-dandelion/go-dandelion/tools/rpccall/lib.proto";
import "sys_menu.proto";

package authorize_proto;

message LoginParams {
    string user_name = 1 [(gogoproto.jsontag) = 'user_name'];
    string password = 2 [(gogoproto.jsontag) = 'password'];
  }

  message LoginResp {
    rpccall.CommonResp common_resp = 1 [(gogoproto.jsontag) = '-'];
    string token = 2 [(gogoproto.jsontag) = 'token'];
  }

  message GetUserMenuReq {
  }

  message GetUserMenuResp {
    rpccall.CommonResp common_resp = 1 [(gogoproto.jsontag) = '-'];
    repeated menu_proto.MenuTreeNode list = 2 [(gogoproto.jsontag) = 'list'];
  }

  message GetUserInfoReq {
  }

  message GetUserInfoResp {
    rpccall.CommonResp common_resp = 1 [(gogoproto.jsontag) = '-'];
    UserInfo user_info = 2 [(gogoproto.jsontag) = 'user_info'];
  }

  message UserInfo {
    int32 id = 1 [(gogoproto.jsontag) = 'id'];
    string user_name = 2 [(gogoproto.jsontag) = 'user_name'];
    string nick_name = 3 [(gogoproto.jsontag) = 'nick_name'];
    string avatar = 4 [(gogoproto.jsontag) = 'avatar'];
    string phone = 5 [(gogoproto.jsontag) = 'phone'];
    int32 status = 6 [(gogoproto.jsontag) = 'status'];
  }